# floral-notepaper

./: .gitignore  UPDATE_FLOW_ANALYSIS.md  package-lock.json  package.json
.github/workflows/: build-artifacts.yml  release.yml
scripts/: set-version.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: desktop.rs  lib.rs  locales.rs  main.rs
src-tauri/src/services/: notes.rs
src-tauri/src/updater/: cdk_store.rs  check.rs  commands.rs  download.rs  errors.rs  helper.rs  install.rs  manifest.rs  mod.rs  platform.rs  scheduler.rs  settings.rs  state.rs  types.rs  version.rs
src-tauri/src/updater/fixtures/: update-manifest.valid.json
src/components/: AboutPanel.test.tsx  AboutPanel.tsx  MainWindow.test.tsx  MainWindow.tsx  NotePad.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx
src/features/markdown/: MarkdownPreview.test.tsx  MarkdownPreview.tsx
src/features/settings/: api.test.ts  types.ts
src/features/update/: UpdateSettingsSection.test.tsx  UpdateSettingsSection.tsx  api.test.ts  api.ts  presentation.test.ts  presentation.ts  types.ts  updateErrors.ts
src/locales/: locale-whitelist.test.ts  locale-whitelist.ts
src/locales/en-US/: translation.json
src/locales/zh-CN/: translation.json
src/locales/zh-HK/: translation.json
